# arc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  plan.md
.github/workflows/: ci.yml  pages.yml
crates/air_cli/: Cargo.toml
crates/air_cli/src/: main.rs
crates/air_codegen/: Cargo.toml
crates/air_codegen/src/: lib.rs
crates/air_effects/: Cargo.toml
crates/air_effects/src/: lib.rs
crates/air_interp/: Cargo.toml
crates/air_interp/src/: lib.rs
crates/air_ir/: Cargo.toml
crates/air_ir/src/: lib.rs
crates/air_object/: Cargo.toml
crates/air_object/src/: lib.rs
crates/air_pass/: Cargo.toml
crates/air_pass/src/: lib.rs
crates/air_pkg/: Cargo.toml
crates/air_pkg/src/: lib.rs
crates/air_proof/: Cargo.toml
crates/air_proof/src/: lib.rs
crates/air_runtime/: Cargo.toml
crates/air_runtime/src/: lib.rs
crates/air_syntax/: Cargo.toml
crates/air_syntax/src/: lib.rs  parser.rs
crates/air_targets/: Cargo.toml
crates/air_targets/src/: lib.rs
crates/air_types/: Cargo.toml
crates/air_types/src/: lib.rs
crates/air_verify/: Cargo.toml
crates/air_verify/src/: lib.rs
crates/arc_async/: Cargo.toml
crates/arc_async/src/: lib.rs
crates/arc_cli/: Cargo.toml
crates/arc_cli/src/: main.rs
crates/arc_cli/tests/: cli_tests.rs
crates/arc_codegen/: Cargo.toml
crates/arc_codegen/src/: emit.rs  isel.rs  lib.rs  low_ir.rs  regalloc.rs  wasm_emit.rs
crates/arc_dialects/: Cargo.toml
crates/arc_dialects/src/: agent.rs  document.rs  lib.rs  relational.rs  tensor.rs
crates/arc_difftest/: Cargo.toml
crates/arc_difftest/src/: conformance.rs  fuzz.rs  integration.rs  lib.rs
crates/arc_effects/: Cargo.toml
crates/arc_effects/src/: lib.rs
crates/arc_format/: Cargo.toml
crates/arc_format/src/: lib.rs
crates/arc_interp/: Cargo.toml
crates/arc_interp/src/: lib.rs  trace.rs
crates/arc_ir/: Cargo.toml
crates/arc_ir/src/: lib.rs
crates/arc_lang/: Cargo.toml
crates/arc_lang/src/: lib.rs
crates/arc_lower/: Cargo.toml
crates/arc_lower/src/: lib.rs
crates/arc_memory/: Cargo.toml
crates/arc_memory/src/: lib.rs
crates/arc_object/: Cargo.toml
crates/arc_object/src/: lib.rs
crates/arc_pass/: Cargo.toml
crates/arc_pass/src/: lib.rs
crates/arc_pkg/: Cargo.toml
crates/arc_pkg/src/: lib.rs
crates/arc_proof/: Cargo.toml
crates/arc_proof/src/: lib.rs
crates/arc_runtime/: Cargo.toml
crates/arc_runtime/src/: lib.rs
crates/arc_security/: Cargo.toml
crates/arc_security/src/: lib.rs
crates/arc_syntax/: Cargo.toml
crates/arc_syntax/src/: lib.rs  parser.rs  printer.rs
crates/arc_targets/: Cargo.toml
crates/arc_targets/src/: lib.rs
crates/arc_types/: Cargo.toml
crates/arc_types/src/: lib.rs
crates/arc_verify/: Cargo.toml
crates/arc_verify/src/: lib.rs
docs/: _config.yml  architecture.md  authority-effects.md  cli.md  conformance.md  examples.md  getting-started.md  index.md  language-reference.md  package-format.md  release.md  security.md
docs/_layouts/: default.html
docs/assets/css/: aex-theme.css
examples/: approval_flow.air  async_pipeline.air  call_example.air  confidential_leak.air  file_copy.air  hello.air  matmul.air  safe_index.air  send_email.air
spec/: AIR-Authority.md  AIR-Core.md  AIR-Effects.md  AIR-Lowering.md  AIR-Memory.md  AIR-Object.md  AIR-Policy.md  AIR-Provenance.md  AIR-RuntimeABI.md  AIR-Target.md  AIR-Trace.md  AIR-TypeSystem.md
tests/codegen/: arithmetic.air  branch.air  call.air  chain_call.air  compare.air  multi_block.air  simple_return.air
tests/interp/: branch_false.air  branch_true.air  call.air  if_else.air  if_else_false.air  loop_sum.air  simple_add.air
tests/lower/: checkpoint.air  spawn_await.air  spawn_await_chain.air
tests/opt/: const_fold.air  dce_target.air  multi_pass.air  strength_reduce_target.air
tests/parse/: branch.air  const_and_arithmetic.air  multi_func.air
tests/spec/: invalid-missing-type.air  invalid-use-before-def.air  valid-branch.air  valid-minimal-module.air
tests/verify/: duplicate_def.air  missing_authority.air  missing_terminator.air  region_undefined_value.air  type_mismatch.air  undefined_value.air  wrong_authority.air
