[workspace]
members = [
    "crates/air_cli",
    "crates/air_ir",
    "crates/air_syntax",
    "crates/air_types",
    "crates/air_verify",
    "crates/air_effects",
    "crates/air_proof",
    "crates/air_pass",
    "crates/air_interp",
    "crates/air_runtime",
    "crates/air_codegen",
    "crates/air_targets",
    "crates/air_object",
    "crates/air_pkg",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.76"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
logos = "0.14"
smol_str = { version = "0.2", features = ["serde"] }
indexmap = { version = "2.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
