[workspace]
resolver = "2"
members = [
    "crates/arc_cli",
    "crates/arc_ir",
    "crates/arc_syntax",
    "crates/arc_types",
    "crates/arc_verify",
    "crates/arc_effects",
    "crates/arc_proof",
    "crates/arc_pass",
    "crates/arc_interp",
    "crates/arc_runtime",
    "crates/arc_codegen",
    "crates/arc_targets",
    "crates/arc_object",
    "crates/arc_pkg",
    "crates/arc_lower",
    "crates/arc_difftest",
    "crates/arc_security",
    "crates/arc_lang",
    "crates/arc_memory",
    "crates/arc_dialects",
    "crates/arc_async",
    "crates/arc_format",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.76"
description = "A compiler IR with first-class capabilities, effects, authority, security analysis, and audit traces."
repository = "https://github.com/harsh-nod/arc"
homepage = "https://harsh-nod.github.io/arc"
documentation = "https://harsh-nod.github.io/arc"
readme = "README.md"
keywords = ["compiler", "ir", "security", "agents", "wasm"]
categories = ["compilers", "command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
logos = "0.14"
smol_str = { version = "0.2", features = ["serde"] }
indexmap = { version = "2.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
