[package]
name = "air_cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
air_ir = { path = "../air_ir" }
air_syntax = { path = "../air_syntax" }
air_verify = { path = "../air_verify" }
air_interp = { path = "../air_interp" }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
