[package]
name = "arc_verify"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
arc_ir = { path = "../arc_ir", version = "0.1.0" }
arc_security = { path = "../arc_security", version = "0.1.0" }
arc_memory = { path = "../arc_memory", version = "0.1.0" }
arc_proof = { path = "../arc_proof", version = "0.1.0" }
thiserror = { workspace = true }
